# debsbom

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  pyproject.toml  renovate.json5  requirements-trixie.txt
.github/actions/docker-init/: action.yml
.github/actions/pytest/: action.yml
.github/workflows/: containers.yml  docs.yml  lint.yml  publish.yml  test.yml
debian/: control  copyright  debsbom.manpages  python-debsbom-doc.install  rules
docs/: Makefile
docs/source/: api.rst  commands.rst  conf.py  design-decisions.rst  examples.rst  index.rst  intro-basics.inc  intro.rst  plugins.rst  starting.rst
docs/source/commands/: compare-description.inc  compare.rst  delta-description.rst  delta.rst  download.rst  export.rst  filter.rst  generate.rst  merge-description.inc  merge.rst  repack.rst  sec-scan.rst  source-merge.rst  trace-path.rst
docs/source/man/: _debsbom-man-footer.inc  debsbom-compare.rst  debsbom-decisions.rst  debsbom-delta.rst  debsbom-download.rst  debsbom-export.rst  debsbom-filter.rst  debsbom-generate.rst  debsbom-merge.rst  debsbom-repack.rst  debsbom-sec-scan.rst  debsbom-source-merge.rst  debsbom-trace-path.rst  debsbom.rst
scripts/: lower-bound.py
src/debsbom/: __init__.py  cli.py  sbom.py
src/debsbom/apt/: cache.py  copyright.py
src/debsbom/bomreader/: __init__.py  bomreader.py  cdxbomreader.py  spdxbomreader.py
src/debsbom/bomwriter/: __init__.py  bomwriter.py  cdxbomwriter.py  spdxbomwriter.py
src/debsbom/commands/: compare.py  delta.py  download.py  export.py  filter.py  generate.py  input.py  merge.py  output.py  repack.py  security_scan.py  source_merge.py  tracepath.py
src/debsbom/compare/: cdx.py  compare.py  spdx.py
src/debsbom/delta/: cdx.py  delta.py  spdx.py
src/debsbom/download/: __init__.py  adapters.py  cdx.py  download.py  dscfilter.py  merger.py  plugin.py  resolver.py  spdx.py
src/debsbom/dpkg/: package.py
src/debsbom/export/: cdx.py  exporter.py  graphml.py  spdx.py
src/debsbom/filter/: cdx.py  filter.py  spdx.py
src/debsbom/generate/: __init__.py  cdx.py  generate.py  spdx.py
src/debsbom/graph/: cdx.py  spdx.py  walker.py
src/debsbom/merge/: cdx.py  merge.py  spdx.py
src/debsbom/repack/: __init__.py  cdx.py  merger.py  packer.py  spdx.py
src/debsbom/resolver/: __init__.py  cdx.py  resolver.py  spdx.py
src/debsbom/schema/: __init__.py  schema-download.json  schema-sec-scan.json  schema-trace-path.json
src/debsbom/securityscan/: scanner.py  writer.py
src/debsbom/snapshot/: client.py
src/debsbom/tracepath/: cdx.py  spdx.py  walker.py
src/debsbom/util/: __init__.py  checksum.py  checksum_cdx.py  checksum_spdx.py  compression.py  progress.py  sbom_processor.py
tests/: conftest.py  test_copyright.py  test_delta.py  test_download.py  test_dpkg.py  test_export.py  test_filter.py  test_generation.py  test_merge.py  test_security_scan.py  test_snapshot.py  test_source_merger.py  test_tracepath.py
tests/data/: checksum-merge-bad.cdx.json  checksum-merge-bad.spdx.json  checksum-merge-md5.cdx.json  checksum-merge-md5.spdx.json  checksum-merge-sha256.cdx.json  checksum-merge-sha256.spdx.json  copyright  delta-base.cdx.json  delta-base.spdx.json  delta-target.cdx.json  delta-target.spdx.json  dpkg-status-minimal  dpkg-status-source  filter.cdx.json  filter.spdx.json  lic-expr-copyright  local-download  merge-full.cdx.json  merge-full.spdx.json  merge-minimal.cdx.json  merge-minimal.spdx.json  non-spdx-copyright  package-filter.cdx.json  package-filter.spdx.json  pkgs-custom-stream  pkgs-stream  security-tracker.fake.json
tests/root/apt-sources/var/lib/apt/: extended_states
tests/root/apt-sources/var/lib/apt/lists/: deb.debian.org_debian_dists_bookworm_InRelease  deb.debian.org_debian_dists_bookworm_main_binary-amd64_Packages  deb.debian.org_debian_dists_bookworm_main_source_Sources  local.example.com_dists_stable_Release  local.example.com_dists_stable_main_binary-amd64_Packages  local.example.com_dists_stable_main_source_Sources
tests/root/apt-sources/var/lib/dpkg/: status
tests/root/built-using/var/lib/dpkg/: status
tests/root/copyright/usr/share/doc/copyright-tests/: copyright
tests/root/copyright/var/lib/dpkg/: status
tests/root/dependency/var/lib/dpkg/: status
tests/root/essential-required/var/lib/apt/: extended_states
tests/root/essential-required/var/lib/dpkg/: status
tests/root/homepage-lowercase/var/lib/dpkg/: status
tests/root/illformed-sources/: source_Sources
tests/root/pre-depends/var/lib/dpkg/: status
tests/root/recommends-suggests/var/lib/dpkg/: status
tests/root/tree/var/lib/dpkg/: status
tests/root/virtual-packages/var/lib/dpkg/: status
