[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "debsbom"
version = "0.0.1"
dependencies = [
  "cyclonedx-python-lib>=11.0.0",
  "packageurl-python>=0.16.0",
  "spdx-tools>=0.8.3",
  "python-debian>=0.1.49",
]
requires-python = ">=3.11"
authors = [
  { name="Christoph Steiger", email="christoph.steiger@siemens.com" },
]
maintainers = [
  { name="Christoph Steiger", email="christoph.steiger@siemens.com" },
  { name="Gernot Hillier", email="gernot.hillier@siemens.com" },
]
description = "Generate SBOMs for Debian-based distributions."
readme = "README.md"
license = "MIT"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Operating System Kernels :: Linux" ,
  "Topic :: Utilities",
]
[project.urls]
Homepage = "https://github.com/siemens/debsbom"
Repository = "https://github.com/siemens/debsbom.git"

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "black",
  "beartype>=0.20",
  "debsbom[download]",
]
download = [
    "requests>=2.25.1",
]
# only distributed in Debian (not pip).
# only needed to speedup apt parsing
apt = [
    "python3-apt>=2.6.0",
]

[project.scripts]
debsbom = "debsbom.cli:main"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
markers = [
  "online: tests requiring internet access",
]
