[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "debsbom"
version = "0.5.1"
dependencies = [
  "packageurl-python>=0.16.0",
  "python-debian>=0.1.49",
]
requires-python = ">=3.11"
authors = [
  { name="Christoph Steiger", email="christoph.steiger@siemens.com" },
]
maintainers = [
  { name="Christoph Steiger", email="christoph.steiger@siemens.com" },
  { name="Felix Moessbauer", email="felix.moessbauer@siemens.com" },
]
description = "Generate SBOMs for Debian-based distributions."
readme = "README.md"
license = "MIT"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Operating System Kernels :: Linux" ,
  "Topic :: Utilities",
]
[project.urls]
Homepage = "https://github.com/siemens/debsbom"
Repository = "https://github.com/siemens/debsbom.git"

[project.optional-dependencies]
dev = [
  "pytest-cov>=6",
  "black",
  "debsbom[mindev]",
  "debsbom[cdx]",
  "debsbom[spdx]",
]
# minimal set of dependencies to run pytest
mindev = [
  "pytest>=6.0",
  "beartype>=0.20",
  "jsonschema>=3.2",
  "lz4",
  "debsbom[download]",
  "debsbom[doc]",
]
cdx = [
  "cyclonedx-python-lib>=9.0.0",
]
spdx = [
  "spdx-tools>=0.8.3",
]
download = [
    "requests>=2.25.1",
    "zstandard>=0.20",
]
# only distributed in Debian (not pip).
# only needed to speedup apt parsing
apt = [
    "python3-apt>=2.6.0",
]

# dependencies to build documentation
doc = [
  "sphinx>=7",
  "sphinx-rtd-theme>=2.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
  "sphinx-argparse>=0.2.1",
]

[project.scripts]
debsbom = "debsbom.cli:main"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
markers = [
  "online: tests requiring internet access",
]
filterwarnings = [
  "error",
]

[tool.coverage.run]
source = [
  "debsbom"
]
